# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
configuration/: local.yaml
migrations/: 20240407111718_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
