[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# 어떤 형태의 경로든 기술할 수 있지만, 커뮤니티의 관습을 따른다.
# `name` 필드를 사용해서 라이브러리 이름을 지정한다. 지정하지 않으면,
# cargosms `package.name`을 사용한다.
path = "src/lib.rs"

# 이중 대괄호를 사용한 것에 주의하자. TOML에서의 배열 표기 문법이다.
# 프로젝트에 하나의 라이브러리는 물론, 여러 바이너리를 포함할 수도 있다.
# 동일한 저장소에서 여러 라이브러리를 관리하고자 한다면,
# workspace 피처를 살펴보기 바란다.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

# Dev 디펜던시는 테스트나 예시를 실행할 때만 사용된다.
# 최종 애플리케이션 바이너리에는 포함되지 않는다.
[dev-dependencies]
reqwest = "0.12.2"